// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HeaderMenu /> with border to right matches with snapshot 1`] = `
.c0 {
  --headerMenu-background-colors-hover: #fff;
  margin: 0;
  padding: 0;
  list-style: none;
}

.c0 .k-HeaderMenu__item__link {
  display: block;
  position: relative;
  height: 3.125rem;
  box-sizing: border-box;
  padding: 1.125rem 1.875rem 1.125rem;
  background-color: #fff;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  color: #222;
  line-height: 1;
  font-size: 0.875rem;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 .k-HeaderMenu__item__link:focus {
  outline-offset: -0.1875rem;
}

.c0 .k-HeaderMenu__item__link:hover,
.c0 .k-HeaderMenu__item__link:focus {
  color: #19b4fa;
  background-color: var(--headerMenu-background-colors-hover);
  -webkit-transition: color 0.2s,background-color 0.4s;
  transition: color 0.2s,background-color 0.4s;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 4.375rem;
  padding: 1.4375rem 1.3125rem 1.375rem 1.875rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: #f6f6f6;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link .k-HeaderMenu__item__arrow {
  margin-left: 1.25rem;
  position: relative;
  left: 0;
  -webkit-transition: left 0.2s;
  transition: left 0.2s;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link svg,
.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link img {
  max-height: 1.5rem;
  width: auto;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link:focus,
.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link:hover {
  color: #222;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link:focus .k-HeaderMenu__item__arrow,
.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link:hover .k-HeaderMenu__item__arrow {
  left: 0.3125rem;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link::before {
  display: none;
}

.c0 .k-HeaderMenu__item--hasButton {
  padding: 1.25rem;
  background-color: #fff;
}

.c0.k-HeaderMenu--hasBorderOnSide .k-HeaderMenu__item__link::before {
  content: '';
  position: absolute;
  top: -0.0625rem;
  bottom: 0;
  width: 0;
  background-color: transparent;
  -webkit-transition: background-color 0.2s,width 0.2s;
  transition: background-color 0.2s,width 0.2s;
}

.c0.k-HeaderMenu--hasBorderOnSide .k-HeaderMenu__item__link:hover::before,
.c0.k-HeaderMenu--hasBorderOnSide .k-HeaderMenu__item__link:focus::before {
  background-color: #19b4fa;
  -webkit-transition: width 0.2s;
  transition: width 0.2s;
}

.c0.k-HeaderMenu--hasBorderOnSide-left .k-HeaderMenu__item__link::before {
  left: -0.0625rem;
}

.c0.k-HeaderMenu--hasBorderOnSide-right .k-HeaderMenu__item__link::before {
  right: -0.0625rem;
}

.c0.k-HeaderMenu--hasBorderOnSideOnHover .k-HeaderMenu__item__link:hover,
.c0.k-HeaderMenu--hasBorderOnSideOnHover .k-HeaderMenu__item__link:focus {
  color: #19b4fa;
}

.c0.k-HeaderMenu--hasBorderOnSideOnHover .k-HeaderMenu__item__link:hover::before,
.c0.k-HeaderMenu--hasBorderOnSideOnHover .k-HeaderMenu__item__link:focus::before {
  width: 0.25rem;
  background-color: #19b4fa;
  -webkit-transition: width 0.2s;
  transition: width 0.2s;
}

.c0.k-HeaderMenu--hasBigItems .k-HeaderMenu__item .k-HeaderMenu__item__link {
  height: 4.375rem;
  padding: 1.75rem 1.3125rem 1.75rem 2.5rem;
}

.c0.k-HeaderMenu--hasBigItems .k-HeaderMenu__item--external .k-HeaderMenu__item__link {
  height: 4.375rem;
  padding: 1.4375rem 1.3125rem 1.375rem 2.5rem;
}

.c0 .k-HeaderMenu__item--tiny .k-HeaderMenu__item__link {
  height: auto;
  padding-top: 0;
  padding-bottom: 0.625rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 400;
}

.c0 .k-HeaderMenu__item--tiny + .k-HeaderMenu__item--tiny .k-HeaderMenu__item__link {
  padding-top: 0.3125rem;
}

.c0 .k-HeaderMenu__item--big .k-HeaderMenu__item__link {
  height: 4.375rem;
  padding: 1.75rem 1.3125rem 1.75rem 2.5rem;
}

.c0 .k-HeaderMenu__item--big.k-HeaderMenu__item--external .k-HeaderMenu__item__link {
  height: 4.375rem;
  padding: 1.4375rem 1.3125rem 1.375rem 2.5rem;
}

.c0 .k-HeaderMenu__item--light {
  color: #b8b8b8;
}

.c0 .k-HeaderMenu__item--isSelected .k-HeaderMenu__item__link {
  color: #19b4fa;
}

.c0.k-HeaderMenu--hasBorderOnSide .k-HeaderMenu__item--isSelected .k-HeaderMenu__item__link::before {
  width: 0.25rem;
  background-color: #19b4fa;
}

.c0.k-HeaderMenu--hasBorders {
  border-left: 0.0625rem solid #eee;
  border-right: 0.0625rem solid #eee;
}

.c0.k-HeaderMenu--hasBorders .k-HeaderMenu__item__link {
  border-bottom: 0.0625rem solid #eee;
}

<ul
  className="c0 k-HeaderMenu k-HeaderMenu--hasBorders k-HeaderMenu--hasBorderOnSide k-HeaderMenu--hasBorderOnSide-right k-HeaderMenu--hasBorderOnSideOnHover"
  style={
    Object {
      "--headerMenu-background-colors-hover": undefined,
    }
  }
>
  <li
    className="k-HeaderMenu__item k-HeaderMenu__item--normal"
    role="menuitem"
  >
    <a
      aria-current={null}
      className="k-HeaderMenu__item__link"
      href="#"
    >
      Item 1
    </a>
  </li>
  <li
    className="k-HeaderMenu__item k-HeaderMenu__item--normal"
    role="menuitem"
  >
    <a
      aria-current={null}
      className="k-HeaderMenu__item__link"
      href="#"
    >
      Item 2
    </a>
  </li>
  <li
    className="k-HeaderMenu__item k-HeaderMenu__item--normal"
    role="menuitem"
  >
    <a
      aria-current={null}
      className="k-HeaderMenu__item__link"
      href="#"
    >
      Item 3
    </a>
  </li>
</ul>
`;

exports[`<HeaderMenu /> with one custom item matches with snapshot 1`] = `
.c0 {
  --headerMenu-background-colors-hover: #fff;
  margin: 0;
  padding: 0;
  list-style: none;
}

.c0 .k-HeaderMenu__item__link {
  display: block;
  position: relative;
  height: 3.125rem;
  box-sizing: border-box;
  padding: 1.125rem 1.875rem 1.125rem;
  background-color: #fff;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  color: #222;
  line-height: 1;
  font-size: 0.875rem;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 .k-HeaderMenu__item__link:focus {
  outline-offset: -0.1875rem;
}

.c0 .k-HeaderMenu__item__link:hover,
.c0 .k-HeaderMenu__item__link:focus {
  color: #19b4fa;
  background-color: var(--headerMenu-background-colors-hover);
  -webkit-transition: color 0.2s,background-color 0.4s;
  transition: color 0.2s,background-color 0.4s;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 4.375rem;
  padding: 1.4375rem 1.3125rem 1.375rem 1.875rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: #f6f6f6;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link .k-HeaderMenu__item__arrow {
  margin-left: 1.25rem;
  position: relative;
  left: 0;
  -webkit-transition: left 0.2s;
  transition: left 0.2s;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link svg,
.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link img {
  max-height: 1.5rem;
  width: auto;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link:focus,
.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link:hover {
  color: #222;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link:focus .k-HeaderMenu__item__arrow,
.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link:hover .k-HeaderMenu__item__arrow {
  left: 0.3125rem;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link::before {
  display: none;
}

.c0 .k-HeaderMenu__item--hasButton {
  padding: 1.25rem;
  background-color: #fff;
}

.c0.k-HeaderMenu--hasBorderOnSide .k-HeaderMenu__item__link::before {
  content: '';
  position: absolute;
  top: -0.0625rem;
  bottom: 0;
  width: 0;
  background-color: transparent;
  -webkit-transition: background-color 0.2s,width 0.2s;
  transition: background-color 0.2s,width 0.2s;
}

.c0.k-HeaderMenu--hasBorderOnSide .k-HeaderMenu__item__link:hover::before,
.c0.k-HeaderMenu--hasBorderOnSide .k-HeaderMenu__item__link:focus::before {
  background-color: #19b4fa;
  -webkit-transition: width 0.2s;
  transition: width 0.2s;
}

.c0.k-HeaderMenu--hasBorderOnSide-left .k-HeaderMenu__item__link::before {
  left: -0.0625rem;
}

.c0.k-HeaderMenu--hasBorderOnSide-right .k-HeaderMenu__item__link::before {
  right: -0.0625rem;
}

.c0.k-HeaderMenu--hasBorderOnSideOnHover .k-HeaderMenu__item__link:hover,
.c0.k-HeaderMenu--hasBorderOnSideOnHover .k-HeaderMenu__item__link:focus {
  color: #19b4fa;
}

.c0.k-HeaderMenu--hasBorderOnSideOnHover .k-HeaderMenu__item__link:hover::before,
.c0.k-HeaderMenu--hasBorderOnSideOnHover .k-HeaderMenu__item__link:focus::before {
  width: 0.25rem;
  background-color: #19b4fa;
  -webkit-transition: width 0.2s;
  transition: width 0.2s;
}

.c0.k-HeaderMenu--hasBigItems .k-HeaderMenu__item .k-HeaderMenu__item__link {
  height: 4.375rem;
  padding: 1.75rem 1.3125rem 1.75rem 2.5rem;
}

.c0.k-HeaderMenu--hasBigItems .k-HeaderMenu__item--external .k-HeaderMenu__item__link {
  height: 4.375rem;
  padding: 1.4375rem 1.3125rem 1.375rem 2.5rem;
}

.c0 .k-HeaderMenu__item--tiny .k-HeaderMenu__item__link {
  height: auto;
  padding-top: 0;
  padding-bottom: 0.625rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 400;
}

.c0 .k-HeaderMenu__item--tiny + .k-HeaderMenu__item--tiny .k-HeaderMenu__item__link {
  padding-top: 0.3125rem;
}

.c0 .k-HeaderMenu__item--big .k-HeaderMenu__item__link {
  height: 4.375rem;
  padding: 1.75rem 1.3125rem 1.75rem 2.5rem;
}

.c0 .k-HeaderMenu__item--big.k-HeaderMenu__item--external .k-HeaderMenu__item__link {
  height: 4.375rem;
  padding: 1.4375rem 1.3125rem 1.375rem 2.5rem;
}

.c0 .k-HeaderMenu__item--light {
  color: #b8b8b8;
}

.c0 .k-HeaderMenu__item--isSelected .k-HeaderMenu__item__link {
  color: #19b4fa;
}

.c0.k-HeaderMenu--hasBorderOnSide .k-HeaderMenu__item--isSelected .k-HeaderMenu__item__link::before {
  width: 0.25rem;
  background-color: #19b4fa;
}

.c0.k-HeaderMenu--hasBorders {
  border-left: 0.0625rem solid #eee;
  border-right: 0.0625rem solid #eee;
}

.c0.k-HeaderMenu--hasBorders .k-HeaderMenu__item__link {
  border-bottom: 0.0625rem solid #eee;
}

<ul
  className="c0 k-HeaderMenu k-HeaderMenu--hasBorders k-HeaderMenu--hasBorderOnSide k-HeaderMenu--hasBorderOnSide-left k-HeaderMenu--hasBorderOnSideOnHover"
  style={
    Object {
      "--headerMenu-background-colors-hover": undefined,
    }
  }
>
  <li
    className="k-HeaderMenu__item k-HeaderMenu__item--normal"
    role="menuitem"
  >
    <a
      aria-current={null}
      className="k-HeaderMenu__item__link"
      href="#"
    >
      Item 1
    </a>
  </li>
  <li
    className="k-HeaderMenu__item k-HeaderMenu__item--normal"
    role="menuitem"
  >
    <a
      aria-current={null}
      className="k-HeaderMenu__item__link"
      href="#"
    >
      Item 2
    </a>
  </li>
  <li
    className="k-HeaderMenu__item k-HeaderMenu__item--normal k-HeaderMenu__item--external"
    role="menuitem"
  >
    <a
      aria-current={null}
      className="k-HeaderMenu__item__link"
      href="#"
    >
      <a
        href="#custom-component"
      >
        Custom component
      </a>
      <svg
        className="k-HeaderMenu__item__arrow headerMenuArrowIcon"
        fill="#222"
        height="5.64"
        style={
          Object {
            "transform": "rotate(90deg)",
          }
        }
        viewBox="0 0 8.48 5.64"
        width="8.48"
        xmlns="http://www.w3.org/2000/svg"
      >
        
        <path
          d="M0 4.24 L4.24,0 L8.48,4.24 L7.08,5.64 L4.24,2.77 L1.4,5.6 z"
        />
      </svg>
    </a>
  </li>
</ul>
`;

exports[`<HeaderMenu /> with one selected item matches with snapshot 1`] = `
.c0 {
  --headerMenu-background-colors-hover: #fff;
  margin: 0;
  padding: 0;
  list-style: none;
}

.c0 .k-HeaderMenu__item__link {
  display: block;
  position: relative;
  height: 3.125rem;
  box-sizing: border-box;
  padding: 1.125rem 1.875rem 1.125rem;
  background-color: #fff;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  color: #222;
  line-height: 1;
  font-size: 0.875rem;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 .k-HeaderMenu__item__link:focus {
  outline-offset: -0.1875rem;
}

.c0 .k-HeaderMenu__item__link:hover,
.c0 .k-HeaderMenu__item__link:focus {
  color: #19b4fa;
  background-color: var(--headerMenu-background-colors-hover);
  -webkit-transition: color 0.2s,background-color 0.4s;
  transition: color 0.2s,background-color 0.4s;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 4.375rem;
  padding: 1.4375rem 1.3125rem 1.375rem 1.875rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: #f6f6f6;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link .k-HeaderMenu__item__arrow {
  margin-left: 1.25rem;
  position: relative;
  left: 0;
  -webkit-transition: left 0.2s;
  transition: left 0.2s;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link svg,
.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link img {
  max-height: 1.5rem;
  width: auto;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link:focus,
.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link:hover {
  color: #222;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link:focus .k-HeaderMenu__item__arrow,
.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link:hover .k-HeaderMenu__item__arrow {
  left: 0.3125rem;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link::before {
  display: none;
}

.c0 .k-HeaderMenu__item--hasButton {
  padding: 1.25rem;
  background-color: #fff;
}

.c0.k-HeaderMenu--hasBorderOnSide .k-HeaderMenu__item__link::before {
  content: '';
  position: absolute;
  top: -0.0625rem;
  bottom: 0;
  width: 0;
  background-color: transparent;
  -webkit-transition: background-color 0.2s,width 0.2s;
  transition: background-color 0.2s,width 0.2s;
}

.c0.k-HeaderMenu--hasBorderOnSide .k-HeaderMenu__item__link:hover::before,
.c0.k-HeaderMenu--hasBorderOnSide .k-HeaderMenu__item__link:focus::before {
  background-color: #19b4fa;
  -webkit-transition: width 0.2s;
  transition: width 0.2s;
}

.c0.k-HeaderMenu--hasBorderOnSide-left .k-HeaderMenu__item__link::before {
  left: -0.0625rem;
}

.c0.k-HeaderMenu--hasBorderOnSide-right .k-HeaderMenu__item__link::before {
  right: -0.0625rem;
}

.c0.k-HeaderMenu--hasBorderOnSideOnHover .k-HeaderMenu__item__link:hover,
.c0.k-HeaderMenu--hasBorderOnSideOnHover .k-HeaderMenu__item__link:focus {
  color: #19b4fa;
}

.c0.k-HeaderMenu--hasBorderOnSideOnHover .k-HeaderMenu__item__link:hover::before,
.c0.k-HeaderMenu--hasBorderOnSideOnHover .k-HeaderMenu__item__link:focus::before {
  width: 0.25rem;
  background-color: #19b4fa;
  -webkit-transition: width 0.2s;
  transition: width 0.2s;
}

.c0.k-HeaderMenu--hasBigItems .k-HeaderMenu__item .k-HeaderMenu__item__link {
  height: 4.375rem;
  padding: 1.75rem 1.3125rem 1.75rem 2.5rem;
}

.c0.k-HeaderMenu--hasBigItems .k-HeaderMenu__item--external .k-HeaderMenu__item__link {
  height: 4.375rem;
  padding: 1.4375rem 1.3125rem 1.375rem 2.5rem;
}

.c0 .k-HeaderMenu__item--tiny .k-HeaderMenu__item__link {
  height: auto;
  padding-top: 0;
  padding-bottom: 0.625rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 400;
}

.c0 .k-HeaderMenu__item--tiny + .k-HeaderMenu__item--tiny .k-HeaderMenu__item__link {
  padding-top: 0.3125rem;
}

.c0 .k-HeaderMenu__item--big .k-HeaderMenu__item__link {
  height: 4.375rem;
  padding: 1.75rem 1.3125rem 1.75rem 2.5rem;
}

.c0 .k-HeaderMenu__item--big.k-HeaderMenu__item--external .k-HeaderMenu__item__link {
  height: 4.375rem;
  padding: 1.4375rem 1.3125rem 1.375rem 2.5rem;
}

.c0 .k-HeaderMenu__item--light {
  color: #b8b8b8;
}

.c0 .k-HeaderMenu__item--isSelected .k-HeaderMenu__item__link {
  color: #19b4fa;
}

.c0.k-HeaderMenu--hasBorderOnSide .k-HeaderMenu__item--isSelected .k-HeaderMenu__item__link::before {
  width: 0.25rem;
  background-color: #19b4fa;
}

.c0.k-HeaderMenu--hasBorders {
  border-left: 0.0625rem solid #eee;
  border-right: 0.0625rem solid #eee;
}

.c0.k-HeaderMenu--hasBorders .k-HeaderMenu__item__link {
  border-bottom: 0.0625rem solid #eee;
}

<ul
  className="c0 k-HeaderMenu k-HeaderMenu--hasBorders k-HeaderMenu--hasBorderOnSide k-HeaderMenu--hasBorderOnSide-left k-HeaderMenu--hasBorderOnSideOnHover"
  style={
    Object {
      "--headerMenu-background-colors-hover": undefined,
    }
  }
>
  <li
    className="k-HeaderMenu__item k-HeaderMenu__item--normal"
    role="menuitem"
  >
    <a
      aria-current={null}
      className="k-HeaderMenu__item__link"
      href="#"
    >
      Item 1
    </a>
  </li>
  <li
    className="k-HeaderMenu__item k-HeaderMenu__item--normal k-HeaderMenu__item--isSelected"
    role="menuitem"
  >
    <a
      aria-current="page"
      className="k-HeaderMenu__item__link"
      href="#"
    >
      Item 2
    </a>
  </li>
  <li
    className="k-HeaderMenu__item k-HeaderMenu__item--normal"
    role="menuitem"
  >
    <a
      aria-current={null}
      className="k-HeaderMenu__item__link"
      href="#"
    >
      Item 3
    </a>
  </li>
</ul>
`;

exports[`<HeaderMenu /> with three items matches with snapshot 1`] = `
.c0 {
  --headerMenu-background-colors-hover: #fff;
  margin: 0;
  padding: 0;
  list-style: none;
}

.c0 .k-HeaderMenu__item__link {
  display: block;
  position: relative;
  height: 3.125rem;
  box-sizing: border-box;
  padding: 1.125rem 1.875rem 1.125rem;
  background-color: #fff;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  color: #222;
  line-height: 1;
  font-size: 0.875rem;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 .k-HeaderMenu__item__link:focus {
  outline-offset: -0.1875rem;
}

.c0 .k-HeaderMenu__item__link:hover,
.c0 .k-HeaderMenu__item__link:focus {
  color: #19b4fa;
  background-color: var(--headerMenu-background-colors-hover);
  -webkit-transition: color 0.2s,background-color 0.4s;
  transition: color 0.2s,background-color 0.4s;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 4.375rem;
  padding: 1.4375rem 1.3125rem 1.375rem 1.875rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: flex-start;
  -ms-flex-item-align: start;
  align-self: flex-start;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  background-color: #f6f6f6;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link .k-HeaderMenu__item__arrow {
  margin-left: 1.25rem;
  position: relative;
  left: 0;
  -webkit-transition: left 0.2s;
  transition: left 0.2s;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link svg,
.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link img {
  max-height: 1.5rem;
  width: auto;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link:focus,
.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link:hover {
  color: #222;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link:focus .k-HeaderMenu__item__arrow,
.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link:hover .k-HeaderMenu__item__arrow {
  left: 0.3125rem;
}

.c0 .k-HeaderMenu__item--external .k-HeaderMenu__item__link::before {
  display: none;
}

.c0 .k-HeaderMenu__item--hasButton {
  padding: 1.25rem;
  background-color: #fff;
}

.c0.k-HeaderMenu--hasBorderOnSide .k-HeaderMenu__item__link::before {
  content: '';
  position: absolute;
  top: -0.0625rem;
  bottom: 0;
  width: 0;
  background-color: transparent;
  -webkit-transition: background-color 0.2s,width 0.2s;
  transition: background-color 0.2s,width 0.2s;
}

.c0.k-HeaderMenu--hasBorderOnSide .k-HeaderMenu__item__link:hover::before,
.c0.k-HeaderMenu--hasBorderOnSide .k-HeaderMenu__item__link:focus::before {
  background-color: #19b4fa;
  -webkit-transition: width 0.2s;
  transition: width 0.2s;
}

.c0.k-HeaderMenu--hasBorderOnSide-left .k-HeaderMenu__item__link::before {
  left: -0.0625rem;
}

.c0.k-HeaderMenu--hasBorderOnSide-right .k-HeaderMenu__item__link::before {
  right: -0.0625rem;
}

.c0.k-HeaderMenu--hasBorderOnSideOnHover .k-HeaderMenu__item__link:hover,
.c0.k-HeaderMenu--hasBorderOnSideOnHover .k-HeaderMenu__item__link:focus {
  color: #19b4fa;
}

.c0.k-HeaderMenu--hasBorderOnSideOnHover .k-HeaderMenu__item__link:hover::before,
.c0.k-HeaderMenu--hasBorderOnSideOnHover .k-HeaderMenu__item__link:focus::before {
  width: 0.25rem;
  background-color: #19b4fa;
  -webkit-transition: width 0.2s;
  transition: width 0.2s;
}

.c0.k-HeaderMenu--hasBigItems .k-HeaderMenu__item .k-HeaderMenu__item__link {
  height: 4.375rem;
  padding: 1.75rem 1.3125rem 1.75rem 2.5rem;
}

.c0.k-HeaderMenu--hasBigItems .k-HeaderMenu__item--external .k-HeaderMenu__item__link {
  height: 4.375rem;
  padding: 1.4375rem 1.3125rem 1.375rem 2.5rem;
}

.c0 .k-HeaderMenu__item--tiny .k-HeaderMenu__item__link {
  height: auto;
  padding-top: 0;
  padding-bottom: 0.625rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 400;
}

.c0 .k-HeaderMenu__item--tiny + .k-HeaderMenu__item--tiny .k-HeaderMenu__item__link {
  padding-top: 0.3125rem;
}

.c0 .k-HeaderMenu__item--big .k-HeaderMenu__item__link {
  height: 4.375rem;
  padding: 1.75rem 1.3125rem 1.75rem 2.5rem;
}

.c0 .k-HeaderMenu__item--big.k-HeaderMenu__item--external .k-HeaderMenu__item__link {
  height: 4.375rem;
  padding: 1.4375rem 1.3125rem 1.375rem 2.5rem;
}

.c0 .k-HeaderMenu__item--light {
  color: #b8b8b8;
}

.c0 .k-HeaderMenu__item--isSelected .k-HeaderMenu__item__link {
  color: #19b4fa;
}

.c0.k-HeaderMenu--hasBorderOnSide .k-HeaderMenu__item--isSelected .k-HeaderMenu__item__link::before {
  width: 0.25rem;
  background-color: #19b4fa;
}

.c0.k-HeaderMenu--hasBorders {
  border-left: 0.0625rem solid #eee;
  border-right: 0.0625rem solid #eee;
}

.c0.k-HeaderMenu--hasBorders .k-HeaderMenu__item__link {
  border-bottom: 0.0625rem solid #eee;
}

<ul
  className="c0 k-HeaderMenu k-HeaderMenu--hasBorders k-HeaderMenu--hasBorderOnSide k-HeaderMenu--hasBorderOnSide-left k-HeaderMenu--hasBorderOnSideOnHover"
  style={
    Object {
      "--headerMenu-background-colors-hover": undefined,
    }
  }
>
  <li
    className="k-HeaderMenu__item k-HeaderMenu__item--normal"
    role="menuitem"
  >
    <a
      aria-current={null}
      className="k-HeaderMenu__item__link"
      href="#"
    >
      Item 1
    </a>
  </li>
  <li
    className="k-HeaderMenu__item k-HeaderMenu__item--normal k-HeaderMenu__item--light"
    role="menuitem"
  >
    <a
      aria-current={null}
      className="k-HeaderMenu__item__link"
      href="#"
    >
      Item 2
    </a>
  </li>
  <li
    className="k-HeaderMenu__item customLiClass k-HeaderMenu__item--normal"
    role="menuitem"
  >
    <a
      aria-current={null}
      className="k-HeaderMenu__item__link"
      href="#"
    >
      Item 3
    </a>
  </li>
</ul>
`;
